--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<p id="line1">On a weary winding path,</p>
-			<p id="line2">darkness creeps all around,</p>
-			<p id="line3">trudge through the aftermath,</p>
-			<p id="line4">and the nightmares that hound.</p>
+			<p id="line1">On a <div id="path">weary winding path,</div></p>
+			<p id="line2"><div id="darkness">darkness</div> creeps all around,</p>
+			<p id="line3"><div id="trudge">trudge</div> through the aftermath,</p>
+			<p id="line4">and the <div id="nightmare">nightmares</div> that hound.</p>
 		</div>
 	</body>
 </html>
