change <p> wrappers to divs to avoid spacing issue

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<p id="line1">On a <div id="path">weary winding path,</div></p>
-			<p id="line2"><div id="darkness">darkness</div> creeps all around,</p>
-			<p id="line3"><div id="trudge">trudge</div> through the aftermath,</p>
-			<p id="line4">and the <div id="nightmare">nightmares</div> that hound.</p>
+			<div id="line1">On a <div id="path" class="word">weary winding path,</div></div>
+			<div id="line2"><div id="darkness" class="word">darkness</div> creeps all around,</div>
+			<div id="line3"><div id="trudge" class="word">trudge</div> through the aftermath,</div>
+			<div id="line4">and the <div id="nightmare" class="word">nightmares</div> that hound.</div>
 		</div>
+		<script src="assets/js/main.js" type="text/javascript"></script>
 	</body>
 </html>
 
