--- a/index.html
+++ b/index.html
@@ -11,9 +11,44 @@
 			<div id="line2"><div id="darkness" class="word">darkness</div> creeps all around,</div>
 			<div id="line3"><div id="trudge" class="word">trudge</div> through the aftermath,</div>
 			<div id="line4">and the <div id="nightmare" class="word">nightmares</div> that hound.</div>
+
+			<!--poem1-->
+			<div id="line1">I woke alone at night in chains </div>
+                        <div id="line2">Of shining steel and weighted rings </div>
+                        <div id="line3">That hung from high in swollen veins, </div>
+                        <div id="line4">Or twist and caught like tattered wings. </div>
+                        <div id="line5">I knew the smell - the stench of death </div>
+                        <div id="line6">That rose and grew as vision blurred </div>
+                        <div id="line7">With every painful, broken breath, </div>
+                        <div id="line8">Until - at last - a shadow stirred. </div>
+                        <div id="line9">It strectched a pointed, stunted limp </div>
+                        <div id="line10">That held a sharpened shape. A sigh. </div>
+                        <div id="line11">A sound. A voice. A whisper, grim: </div>
+                        <div id="line12">'You'll cross your heart and hope to die...' </div>
+			
+
+			
+
+			<!--poem2-->
+			<div id="line1"> </div>
+                        <div id="line2"> </div>
+                        <div id="line3"> </div>
+                        <div id="line4"> </div>
+                        <div id="line5"> </div>
+                        <div id="line6"> </div>
+                        <div id="line7"> </div>
+                        <div id="line8"> </div>
+                        <div id="line9"> </div>
+                        <div id="line10"> </div>
+                        <div id="line11"> </div>
+                        <div id="line12"> </div>
+                        <div id="line13"> </div>
+                        <div id="line14"> </div>
+                        <div id="line15"> </div>
+
+
 		</div>
 		<script src="assets/js/main.js" type="text/javascript"></script>
 	</body>
 </html>
-
 
