Add and markup poem 2

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<div id="line1">On a <div id="path" class="word">weary winding path,</div></div>
+			<!-- <div id="line1">On a <div id="path" class="word">weary winding path,</div></div>
 			<div id="line2"><div id="darkness" class="word">darkness</div> creeps all around,</div>
 			<div id="line3"><div id="trudge" class="word">trudge</div> through the aftermath,</div>
-			<div id="line4">and the <div id="nightmare" class="word">nightmares</div> that hound.</div>
+			<div id="line4">and the <div id="nightmare" class="word">nightmares</div> that hound.</div> -->
 
 			<!--poem1-->
-			<div id="line1">I woke alone at night in chains </div>
+			<!-- <div id="line1">I woke alone at night in chains </div>
                         <div id="line2">Of shining steel and weighted rings </div>
                         <div id="line3">That hung from high in swollen veins, </div>
                         <div id="line4">Or twist and caught like tattered wings. </div>
@@ -24,27 +24,27 @@
                         <div id="line9">It strectched a pointed, stunted limp </div>
                         <div id="line10">That held a sharpened shape. A sigh. </div>
                         <div id="line11">A sound. A voice. A whisper, grim: </div>
-                        <div id="line12">'You'll cross your heart and hope to die...' </div>
+                        <div id="line12">'You'll cross your heart and hope to die...' </div> -->
 			
 
 			
 
 			<!--poem2-->
-			<div id="line1"> </div>
-                        <div id="line2"> </div>
-                        <div id="line3"> </div>
-                        <div id="line4"> </div>
-                        <div id="line5"> </div>
-                        <div id="line6"> </div>
-                        <div id="line7"> </div>
-                        <div id="line8"> </div>
-                        <div id="line9"> </div>
-                        <div id="line10"> </div>
-                        <div id="line11"> </div>
-                        <div id="line12"> </div>
-                        <div id="line13"> </div>
-                        <div id="line14"> </div>
-                        <div id="line15"> </div>
+			<div id="line1">'There's <div id="something" class="word">something</div> here with me,' </div>
+                        <div id="line2">he whispered, <div id="afraid" class="word">afraid</div> - </div>
+                        <div id="line3">A shape in the <div id="darkness" class="word">darkness</div>, </div>
+                        <div id="line4"> the <div id="shadow" class="word">shadow</div> it made.</div>
+                        <div id="line5">It moved in the <div id="silence" class="word">silence</div> - </div>
+                        <div id="line6">it turned in the<div id="night" class="word">night</div> - </div>
+                        <div id="line7">It crawled and it crept </div>
+                        <div id="line8">in a flicker of light. </div>
+                        <div id="line9"> It came from seclusion -</div>
+                        <div id="line10"> it slipped throgh the trees -</div>
+                        <div id="line11">A voice in the gloaming, </div>
+                        <div id="line12"> a sound on the breeze -</div>
+                        <div id="line13"> A crowding of creatures,</div>
+                        <div id="line14">he saw with dismay. </div>
+                        <div id="line15">He hid on the ground till they all went away. </div>
 
 
 		</div>
