--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div id="line9"> It came from seclusion -</div>
                         <div id="line10"> it slipped throgh the trees -</div>
                         <div id="line11">A voice in the gloaming, </div>
-                        <div id="line12"> a sound on the breeze -</div>
+                        <div id="line12"> a sound on the <div id="breeze" class="word">breeze</div> -</div>
                         <div id="line13"> A crowding of creatures,</div>
                         <div id="line14">he saw with dismay. </div>
                         <div id="line15">He hid on the ground till they all went away. </div>
