Add div wrappers around words

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
                         <div id="line4"> the <div id="shadow" class="word">shadow</div> it made.</div>
                         <div id="line5">It moved in the <div id="silence" class="word">silence</div> - </div>
                         <div id="line6">it turned in the <div id="night" class="word">night</div> - </div>
-                        <div id="line7">It crawled and it crept </div>
-                        <div id="line8">in a flicker of light. </div>
-                        <div id="line9"> It came from seclusion -</div>
-                        <div id="line10"> it slipped throgh the trees -</div>
-                        <div id="line11">A voice in the gloaming, </div>
+                        <div id="line7">It <div id="crawled" class="word">crawled</div> and it crept </div>
+                        <div id="line8">in a flicker of <div id="light" class="word">light</div>. </div>
+                        <div id="line9"> It came from <div id="seclusion" class="word">seclusion</div> -</div>
+                        <div id="line10"> it slipped throgh the <div id="trees" class="word">trees</div> -</div>
+                        <div id="line11">A <div id="voice" class="word">voice</div> in the gloaming, </div>
                         <div id="line12"> a sound on the <div id="breeze" class="word">breeze</div> -</div>
-                        <div id="line13"> A crowding of creatures,</div>
-                        <div id="line14">he saw with dismay. </div>
-                        <div id="line15">He hid on the ground till they all went away. </div>
+                        <div id="line13"> A <div id="crowding" class="word">crowding</div> of creatures,</div>
+                        <div id="line14">he saw with <div id="dismay" class="word">dismay</div>. </div>
+                        <div id="line15">He <div id="hid" class="word">hid</div> on the ground till they all went away. </div>
 
 
 		</div>
